generate a basic & totally random maze inspired by http://10print.org

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(coordinate)
 export(draw)
 export(draw_effect)
 export(generate_border)
+export(generate_maze)
 export(get_ch)
 export(play_snake)
 export(retro_example)
